<resources>
    <string name="app_name">Paczek</string>
    <string name="button_1">Button 1</string>
    <string name="button_2">Button 2</string>
    <string name="button_3">Button 3</string>
    <string name="button_4">Button 4</string>
    <string name="button_5">Button 5</string>
    <string name="some_text">Some text...</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="settings">Settings</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="remember_password">Remember password</string>
    <string name="log_in">Log in</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="four">4</string>
    <string name="three">3</string>
    <string name="first_activity">First Activity</string>
    <string name="dialog">Dialog</string>
    <string name="switch_activity">Switch activity</string>
    <string name="maps">maps</string>
    <string name="enter_website_address">Enter website address</string>
    <string name="example_website">www.google.com</string>
    <string name="open_website">Open website</string>
    <string name="enter_city_for_search">Enter city for search</string>
    <string name="example_city">Wroclaw</string>
    <string name="show_the_city">Show the city</string>
    <string name="show_the_location">Show the location</string>
    <string name="enter_the_longitude">Enter the longitude</string>
    <string name="example_longnitude">51.1081</string>
    <string name="enter_the_latitude">Enter the latitude</string>
    <string name="example_latitude">17.0316</string>
    <string name="alarm">Alarm</string>
    <string name="set_the_alarm">Set the alarm</string>
    <string name="set_the_timer">Set the timer</string>
    <string name="fragments">Fragments</string>
    <string name="fragment1">Fragment1</string>
    <string name="fragment2">Fragment2</string>
    <string name="enter_the_text">Enter the text</string>
    <string name="get_the_text">Get the text</string>
    <string name="notifications">Notifications</string>
    <string name="basic_notification">Basic notification</string>
    <string name="welcome_in_activity_from_notification">Welcome in activity from basic notification!</string>
    <string name="welcome_in_activity_from_action_notification">Welcome in activity from action notification!</string>
    <string name="action_notification">action notification</string>
    <string name="expanded_notification">Expanded notification</string>
    <string name="grouped_notification">Grouped notification</string>
    <string name="reply_notification">Reply notification</string>
    <string name="activity_state">Activity state</string>
    <string name="ui_components">UI Components</string>
    <string name="button_has_been_pressed_0_times">Button has been pressed 0 times</string>
    <string name="click">Click</string>
    <string name="orientation">Orientation</string>
    <string name="auto_complete">Auto complete</string>
    <string name="list_view">List View</string>
    <string name="list_view_2">List View 2</string>
    <string name="show_selected_items">Show selected items</string>
    <string name="spinner">Spinner</string>

    <string-array name="voivodeships">
        <item>Greater Poland</item>
        <item>Kuyavia-Pomerania</item>
        <item>Lesser Poland</item>
        <item>Łódź</item>
        <item>Lower Silesia</item>
        <item>Lublin</item>
        <item>Lubusz</item>
        <item>Masovia</item>
        <item>Opole</item>
        <item>Podlaskie</item>
        <item>Pomerania</item>
        <item>Silesia</item>
        <item>Subcarpathia</item>
        <item>Holy Cross Province</item>
        <item>Warmia-Masuria</item>
        <item>West Pomerania</item>
    </string-array>
</resources>
