<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/gradient_background">

    <Button
        android:text="@string/activity_state"
        style="@style/ButtonPaczek"
        android:background="@drawable/gradient"
        android:onClick="OnActivityState"
        android:id="@+id/buttonActivityState"/>

    <Button
        android:text="@string/orientation"
        style="@style/ButtonPaczek"
        android:background="@drawable/gradient"
        android:onClick="OnOrientation"
        android:id="@+id/buttonOrientation"/>

    <Button
        android:text="@string/auto_complete"
        style="@style/ButtonPaczek"
        android:background="@drawable/gradient"
        android:onClick="OnAutoComplete"
        android:id="@+id/buttonAutoComplete"/>

    <Button
        android:text="@string/list_view"
        style="@style/ButtonPaczek"
        android:background="@drawable/gradient"
        android:onClick="OnListview"
        android:id="@+id/buttonListView"/>

    <Button
        android:text="@string/list_view_2"
        style="@style/ButtonPaczek"
        android:background="@drawable/gradient"
        android:onClick="OnListview2"
        android:id="@+id/buttonListView2"/>

    <Button
        android:text="@string/spinner"
        style="@style/ButtonPaczek"
        android:background="@drawable/gradient"
        android:onClick="OnSpinner"
        android:id="@+id/buttonSpinner"/>

</LinearLayout>