<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_large"
            android:text="@string/some_text"
            android:layout_gravity="center_horizontal"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:text="@string/one"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:text="@string/two"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:text="@string/three"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:text="@string/four"/>

    </LinearLayout>

</ScrollView>

