<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/gradient_background">

    <Button
        android:text="@string/basic_notification"
        style="@style/ButtonPaczek"
        android:background="@drawable/gradient"
        android:onClick="OnBasicNotification"
        android:id="@+id/buttonBasicNotification"/>

    <Button
        android:text="@string/action_notification"
        style="@style/ButtonPaczek"
        android:background="@drawable/gradient"
        android:onClick="OnActionNotification"
        android:id="@+id/buttonActionNotification"/>

    <Button
        android:text="@string/expanded_notification"
        style="@style/ButtonPaczek"
        android:background="@drawable/gradient"
        android:onClick="OnExpandedNotification"
        android:id="@+id/buttonExpandedNotification"/>

    <Button
        android:text="@string/grouped_notification"
        style="@style/ButtonPaczek"
        android:background="@drawable/gradient"
        android:onClick="OnGroupedNotification"
        android:id="@+id/buttonGroupedNotification"/>

    <Button
        android:text="@string/reply_notification"
        style="@style/ButtonPaczek"
        android:background="@drawable/gradient"
        android:onClick="OnReplydNotification"
        android:id="@+id/buttonReplyNotification"/>

</LinearLayout>